# SWOT-Analysis-Agent

./: .dockerignore  .env.example  BUSINESS_README.md  Dockerfile  Dockerfile.hf_spaces  FRONTEND_SETUP.md  Makefile  README.md  TROUBLESHOOTING.md  api_hf_spaces.py  api_simple.py  app.py  hf_spaces_config.json  hf_spaces_frontend.html  index.html  requirements.txt  requirements_hf_spaces.txt  run_frontend.sh  setup.py  simple-frontend.html  simple_proxy.py  space_config.json  start_space.sh  test_api_connection.py  test_backend.py  test_connection.html  test_cors.html  test_frontend_api.html
A2A-strategy-agent/: .gitignore  checklist.md
A2A-strategy-agent/data/: strategy.db
A2A-strategy-agent/src/: tools.py
A2A-strategy-agent_v2/: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
A2A-strategy-agent_v2/docs/: architecture.md  case_study.md  checklist.md  configuration.md  directory_tree.md  implement.md  project_structure.md  project_summary.md  run.md
A2A-strategy-agent_v2/src/: __init__.py  demo_mcp_llm_integration.py  graph_cyclic.py  graph_linear.py  mcp_server.py  state.py  test_direct_failure.py  test_force_failure.py  test_simple_failure.py  tools.py
A2A-strategy-agent_v2/src/nodes/: analyst.py  critic.py  editor.py  researcher.py
A2A-strategy-agent_v2/src/prompts/: rubric.txt
A2A-strategy-agent_v2/src/utils/: conditions.py  init_db.py
A2A-strategy-agent_v2/tests/: graph_test.py  test_mcp.py  test_mcp_comprehensive.py
api/: main.py
config/: deployment_guide.md  frontend_deployment.md
data/: strategy.db
data/cache/: us_stocks.json
docs/: architecture.md
frontend/: eslint.config.js  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/.storybook/: preview.tsx
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  index.css
mcp-servers/financials-basket/: README.md  mcp_sec_edgar.md  server.py  test_fetchers.py
mcp-servers/macro-basket/: README.md  server.py  test_fetchers.py
mcp-servers/news-basket/: README.md  mcp_tavily.md  server.py  test_fetchers.py
mcp-servers/sentiment-basket/: pyproject.toml  requirements.txt  server.py  test_fetchers.py
mcp-servers/valuation-basket/: README.md  server.py  test_fetchers.py
mcp-servers/volatility-basket/: README.md  mcp_volatility_basket.md  pyproject.toml  server.py  test_fetchers.py
requirements/: complete.txt  core.txt  huggingface.txt
scripts/: start_unified.sh  unified_api.py
src/: graph_cyclic.py  main.py  state.py  stock_listings.py
src/nodes/: analyst.py  critic.py  editor.py  researcher.py
static/: index.html
static/assets/: index--fMzLyzB.css  index-B8TTdBqW.js  index-BINMjQIH.js  index-BM618AMs.js  index-BNBmfdWM.css  index-BW80G1mt.js  index-BXxQ6uUJ.js  index-Bc3qQ4bX.js  index-BdvsdNQY.css  index-BlNNmxHW.css  index-BnocTLMR.js  index-BqB12PZu.css  index-C1cf7zPS.css  index-C4qkvRpG.js  index-C9syIbfC.css  index-CGao-Cku.js  index-CHmjZSS9.js  index-CIw_v6W4.js  index-CLpdiHK5.js  index-CQUi-qvd.css  index-CQksWTci.js  index-C__mJ2hF.js  index-CaEOAoVe.css  index-CaLm9xAl.js  index-Cl1YBNBv.css  index-CzhB_Rvl.js  index-D-r2xdvw.css  index-D6XBdywF.js  index-DH37yrRK.css  index-DHJSB-PQ.js  (+15 more)
tests/: run_all_tests.py  test_mcp_database.py  test_mcp_integration.py  test_self_correcting_loop.py  test_streamlit.py  test_workflow_graph.py
(+11 files in other folders)
