[metadata]
name = a2a-strategy-agent
version = 1.0.0
description = AI-Powered Strategic Analysis with Self-Correcting Quality Control
author = VN
author_email = vn6295337@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vn6295337/A2A-strategy-agent
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Business/Commerce
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Topic :: Office/Business

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    streamlit>=1.31.0
    langchain>=0.1.0
    langchain-community>=0.1.0
    langchain-core>=0.1.0
    langsmith>=0.1.0
    tavily-python>=0.1.0
    python-dotenv>=1.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=5.0.0
    pylint>=2.15.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*