[project]
name = "volatility-basket-mcp"
version = "1.0.0"
description = "MCP server for volatility metrics (VIX, Beta, IV, HV) with SWOT interpretation"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
volatility-basket = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
